src/test/deca/context/invalid/declMethod-wrongSignatureTypeIntBool.context
declMethod-wrongSignatureTypeIntBool.deca:9: